fix: don't let editor overlap with actions

--- a/app/styles/codemirror.styl
+++ b/app/styles/codemirror.styl
@@ -12,7 +12,7 @@ left-margin = 16px
 
 .CodeMirror
   background-color: transparent
-  margin: 24px horizontal-padding 22px left-margin
+  margin: 24px 240px 22px left-margin
   transist: all
   @extend .code-style
   pre
